resolved alignment issue in add organisation

--- a/src/components/super-admin/OrganizationForm.module.css
+++ b/src/components/super-admin/OrganizationForm.module.css
@@ -11,10 +11,12 @@
 
 
 .inputstyle{
+  /* width: 95%; */
   border-radius: 40px;
   border: 1px solid var(--Brand-700, #4338CA);
   background-color:transparent;
   margin-bottom: 1em;
+  height: 2.1rem;
   padding: 0.375rem 0.75rem;
 }
 
@@ -23,6 +25,7 @@
 }
 
 .selectContainer{
+  width:100%;
   height: 46px;
   border-radius: 40px;
   border: 1px solid var(--Brand-700, #4338CA);
@@ -56,139 +59,111 @@
 }
 
 .pincodeStyle{
+  /* width:95%; */
   border-radius: 40px;
   border: 1px solid var(--Brand-700, #4338CA);
   background-color:transparent;
   margin-bottom: 1em;
   padding: 0.375rem 0.75rem;
+  height: 2.1rem;
 }
 
-@media (max-width: 290px) {
-  .inputstyle {
-    width: 8.2rem;
-    height: 25px; 
-  }
-  .selectContainer{
-    min-width: 10rem;
-    height: 40px;
+
+@media (max-width: 600px) {
+  .inputstyle{
+    width: 88.5%
   }
 
   .pincodeStyle{
-    width: 8.2rem;
-    height:1.5rem;
+    width:88.5%
   }
 }
 
-@media (min-width: 291px) and (max-width: 390px) {
-  .inputstyle {
-    width: 11rem;
-    height: 1.8rem; 
-  }
-  .selectContainer{
-    width: 12.5rem;
+
+@media (min-width: 601px) and (max-width: 750px){
+  .inputstyle{
+    width: 95%;
+    background-color: red;
   }
 
   .pincodeStyle{
-    width: 11rem;
-    height:1.8rem;
+    width:95%
   }
 }
 
 
-@media (min-width: 391px) and (max-width: 480px) {
-  .inputstyle {
-    width: 15rem;
-    height: 30px; 
-  }
-  .selectContainer{
-    width: 16.5rem;
+@media (min-width: 751px) and (max-width: 800px){
+  .inputstyle{
+    width: 95.5%;
   }
 
   .pincodeStyle{
-    width: 15rem;
-    height:1.8rem;
+    width:95.5%
   }
 }
 
-@media (min-width: 481px) and (max-width: 600px) {
-  .inputstyle {
-    width: 23rem;
-    height: 35px; 
-  }
-  .selectContainer{
-    width: 25rem;
+@media (min-width: 801px) and (max-width: 900px){
+  .inputstyle{
+    width: 100%;
   }
 
   .pincodeStyle{
-    width: 23.5rem;
-    height:2rem;
+    width:100%
   }
-  
 }
 
-@media (min-width: 601px) and (max-width: 900px) {
-  .inputstyle {
-    width: 33rem;
-    height: 35px;
-  }
-
-  .selectContainer{
-    width: 35rem;
+@media (min-width: 901px) and (max-width: 1022px){
+  .inputstyle{
+    width: 90%
   }
 
   .pincodeStyle{
-    width: 33rem;
-    height:1.8rem;
-  }
-}
-
-@media (min-width: 901px) and (max-width: 1024px) {
-  .inputstyle {
-    width: 20rem;
-    height: 35px;
+    width:90%
   }
 
   .selectContainer{
-    width: 22rem;
-  }
-
-  .pincodeStyle{
-    width: 20rem;
-    height:1.9rem;
+    width: 96%
   }
 }
 
-@media (min-width: 1025px) and (max-width: 1400px) {
-  .inputstyle {
-    width: 24rem;
-    height: 35px;
+@media (min-width: 1023px) and (max-width: 1200px){
+  .inputstyle{
+    width: 90%
   }
+
+  .pincodeStyle{
+    width:90%
+  }
+
   .selectContainer{
-    width: 26rem;
-    height: 48px;
-  }
-
-  .pincodeStyle{
-    width: 24rem;
-    height:2.1rem;
+    width: 96%
   }
 }
 
-@media (min-width: 1401px) {
-  .inputstyle {
-    width: 88%;
-    height: 35px;
+@media (min-width: 1201px){
+  .inputstyle{
+    width: 90%
   }
+
+  .pincodeStyle{
+    width:90%
+  }
+
   .selectContainer{
-    width: 93%;
-    height: 48px;
-  }
-
-  .pincodeStyle{
-    width: 88%;
-    height:35px;
+    width: 96%
   }
 }
+
+
+
+
+
+
+
+
+
+
+
 
 .labels{
   display: flex;
